enable caching for large downloads, add example

--- a/src/example_notebook.ipynb
+++ b/src/example_notebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bdcb81ed-609c-4a37-b2eb-34d04ef9e549",
+   "metadata": {},
+   "source": [
+    "# Example usage of vridownload"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b596039e-f49f-4258-a405-a76c0030ae46",
@@ -17,95 +25,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7e7c9776-38a5-478d-8f5d-1c7e128f3249",
+   "cell_type": "markdown",
+   "id": "4d30a9a8-b2a2-491a-94d7-401586e066aa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "logger = logging.getLogger(__name__)\n",
-    "logger.setLevel(logging.DEBUG)\n",
-    "ch = logging.StreamHandler()\n",
-    "ch.setLevel(logging.DEBUG)\n",
-    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "ch.setFormatter(formatter)\n",
-    "ch.setFormatter(formatter)"
+    "## Create downloader and build bbox for query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d4800be9-91b3-4ba7-9876-daf8fa943832",
    "metadata": {},
    "outputs": [],
    "source": [
     "wfs = vridownload.WFS_downloader()\n",
-    "#d = wfs.get_data('WHSE_IMAGERY_AND_BASE_MAPS.GSR_AIRPORTS_SVW')\n",
     "\n",
-    "page_size = 10000\n",
-    "start_index = 0\n",
     "#bbox queries\n",
-    "bbox_WGS84 = (49.25, -118.96, 49.59, -118.67,\"urn:ogc:def:crs:EPSG:4326\")\n",
     "bbox_albers = (1491867, 480179, 1567106, 566654,\"urn:ogc:def:crs:EPSG:3005\")\n",
-    "# Format of cql\n",
-    "# WITHIN(GEOMETRY,POLYGON((830772.7 367537.4, 1202463 367537.4, 1202463 651616.7, 830772.7 651616.7, 830772.7 367537.4)))\n",
-    "#bbox = (1651427, 604341, 1653929, 607218)\n",
     "\n",
-    "# wfs.to_geojson(response,'test.geojson')"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d2b4ddf-086d-47da-bfac-cbbd20a693e1",
+   "metadata": {},
+   "source": [
+    "## Query Examples\n",
+    "### formation of cql (can add property query to this) \n",
+    "* when using geometry be aware there is a size limit to the number of characters in the get request.\n",
+    "    for complex polygons use a convex hull\n",
+    "---------------------------\n",
+    "WITHIN(GEOMETRY,POLYGON((830772.7 367537.4, 1202463 367537.4, 1202463 651616.7, 830772.7 651616.7, 830772.7 367537.4)))  \n",
+    "### formation of bbox  \n",
+    "---------------------------\n",
+    "bbox = (1651427, 604341, 1653929, 607218)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "1d54e851-a020-4ae6-9c08-229f00dc7b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read tsa geojson\n",
+    "tsa = wfs.geojson_from_file('../data/tsa.geojson')\n",
+    "# create wkt for insertion into cql\n",
+    "tsa_wkt = shape(tsa['features'][0][\"geometry\"]).wkt\n",
+    "cql = f\"INTERSECTS(GEOMETRY,{tsa_wkt})\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c4def9a-2cb0-4d32-b660-5ccd82ba8494",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Get Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a3d25c7-e419-46d0-ba95-cfcd3186215e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DEBUG:__main__:process took 103 seconds\n"
+      "process took 69 seconds\n"
      ]
     }
    ],
    "source": [
-    "tsa = wfs.from_geojson('../tsa.geojson')\n",
-    "tsa_wkt = shape(tsa['features'][0][\"geometry\"]).wkt\n",
-    "cql = f\"INTERSECTS(GEOMETRY,{tsa_wkt})\"\n",
     "start = time.time()\n",
-    "logger.debug(\"Starting to get data... \")\n",
-    "response = wfs.get_data(dataset='WHSE_FOREST_VEGETATION.VEG_COMP_LYR_R1_POLY', query=cql)\n",
+    "df = wfs.get_data(dataset='WHSE_FOREST_VEGETATION.VEG_COMP_LYR_R1_POLY', query=cql)\n",
     "dtime = time.time() - start\n",
-    "logger.debug(f'process took {round(dtime)} seconds')\n",
+    "print(f'process took {round(dtime)} seconds')\n",
     "# tsa = wfs.to_geojson(response,'boundary_vri.geojson')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c214f523-bf57-4346-a304-4797db221e50",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:__main__:Writing 65008 features to geodataframe\n",
-      "DEBUG:__main__:process took 5 seconds\n"
-     ]
-    }
-   ],
-   "source": [
-    "logger.debug(f'Writing {len(response)} features to geodataframe')\n",
-    "start = time.time()\n",
-    "df = wfs.to_df(response)\n",
-    "dtime = time.time() - start\n",
-    "logger.debug(f'process took {round(dtime)} seconds')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "d4e4aeb4-7076-4170-bb3c-0b65b0103aa6",
    "metadata": {},
    "outputs": [
@@ -115,7 +121,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -138,6 +144,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84549eae-88a5-4274-8406-391e544323aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c214f523-bf57-4346-a304-4797db221e50",
    "metadata": {},
    "outputs": [],
    "source": []
